--- a/users/10001/config.json
+++ b/users/10001/config.json
@@ -4,5 +4,6 @@
     "membershipLevel": 4,
     "coinLimit": 0,
     "maxActiveOrders": 3,
+    "orderBudgetLimit": 5,
     "automaticClose": "true"
 }
