--- a/users/10002/config.json
+++ b/users/10002/config.json
@@ -4,5 +4,6 @@
     "membershipLevel": 4,
     "coinLimit": 0,
     "maxActiveOrders": 3,
-    "automaticClose": true
+    "orderBudgetLimit": 5,
+    "automaticClose": "true"
 }
